--- a/src/components/multi-select/multiselect.css
+++ b/src/components/multi-select/multiselect.css
@@ -143,7 +143,6 @@
 
 .custom-select-colose-btn {
   cursor: pointer;
-
 }
 
 .custom-select-checkbox-icon {
@@ -220,5 +219,70 @@
 
 .common {
   transition: 0.2s ease-in-out;
+}
 
+/* Dark mood */
+html.dark .custom-select-box {
+  background-color: rgb(24 34 52);
+}
+html.dark .custom-select-input {
+  background-color: rgb(24 34 52);
+  border: 1px solid rgb(51 65 85);
+}
+
+html.dark .custom-select-search-input {
+  background-color: rgb(24 34 52);
+  border: 1px solid rgb(51 65 85);
+  color: #d1d5db;
+}
+
+html.dark .custom-select-search-input:focus {
+  border: 1px solid rgb(118, 133, 151);
+}
+
+html.dark .custom-select-list:hover {
+  background: rgb(33, 44, 66);
+}
+
+html.dark .custom-select-list {
+  color: #d1d5db;
+}
+
+html.dark .custom-select-checkbox {
+  background-color: rgb(15 21 39);
+  border: 1px solid rgb(51 65 85);
+}
+
+html.dark .custom-select-header {
+  border: 1px solid rgb(51 65 85);
+}
+
+html.dark .custom-select-list.highlighted {
+  background: rgb(33, 44, 66);
+  color: #d1d5db;
+}
+
+html.dark .custom-select-group-list::-webkit-scrollbar {
+  width: 14px; /* Width of the scrollbar */
+}
+
+html.dark .custom-select-group-list::-webkit-scrollbar-thumb {
+  background-color: rgb(44, 61, 94); /* Color of the scroll thumb */
+  /* Rounded corners */
+}
+
+html.dark .custom-select-group-list::-webkit-scrollbar-track {
+  background-color: rgb(33, 44, 66); /* Background of the scrollbar track */
+}
+
+html.dark .custom-select-chip-group {
+  color: #d1d5db;
+}
+
+html.dark .close-icon {
+  color: #d1d5db;
+}
+
+html.dark .common {
+  color: #d1d5db;
 }
